[project]
name = "doxa-cli"
version = "0.0.1"
authors = [
  { name="Jeremy Lo Ying Ping", email="jeremyloyingping@gmail.com" },
]
description = "The CLI for interacting with DOXA, a powerful platform for running engaging online artificial intelligence competitions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click >= 8.1.3"
]

[project.scripts]
doxa = "doxa_cli:main"

[project.urls]
"Homepage" = "https://github.com/DoxaAI/cli"
"Bug Tracker" = "https://github.com/DoxaAI/cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
