[project]
name = "doxa-cli"
version = "0.1.0"
authors = [
  { name="Jeremy Lo Ying Ping", email="jeremyloyingping@gmail.com" },
]
description = "The CLI for interacting with DOXA, a powerful platform for running engaging online artificial intelligence competitions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click ~= 8.1.3",
  "halo ~= 0.0.31, >= 0.0.31",
  "requests ~= 2.26.0",
  "requests_toolbelt ~= 0.10.1",
  "appdirs >= 1.4.4",
  "pyyaml >= 6.0"
]

[project.scripts]
doxa = "doxa_cli:main"

[project.urls]
"Homepage" = "https://github.com/DoxaAI/cli"
"Bug Tracker" = "https://github.com/DoxaAI/cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
